chore: test to validate api-spec and implementation
