# src/main/kotlin/sykmelding/model/Sykmelding.kt
@@ -26,3 +26,8 @@ data class SykmeldingNotFound(
     private val id: String,
     val message: String = "Sykmelding not found $id"
 )
+
+data class InternalServerError(
+    private val id: String,
+    val message: String = "Error while getting sykmelding with id: $id"
+)
